--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ li a {
 
 .main {
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -42,12 +42,7 @@ li a {
           align-items: center;
 }
 
-.main header {
-  height: 20%;
-}
-
 .main main {
-  height: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -60,10 +55,6 @@ li a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.main nav {
-  height: 20%;
 }
 
 .box {
@@ -119,7 +110,7 @@ li a {
 }
 
 .name {
-  font-size: 30px;
+  font-size: 40px;
   word-spacing: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -131,7 +122,7 @@ li a {
   background-color: white;
   border-radius: 50%;
   display: inline;
-  margin-top: 40px;
+  margin-top: 20px;
   overflow: hidden;
   -webkit-box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.4);
           box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.4);
