--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
   min-height: 100vh;
-  background-color: crimson;
+  background-color: #475e6e;
   color: white;
 }
 
@@ -26,7 +26,7 @@ li a {
 
 .main {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -60,7 +60,7 @@ li a {
 .box {
   height: 100%;
   width: 50%;
-  background-color: #790a20;
+  background-color: #2a3b47;
   position: absolute;
   top: 0%;
   -webkit-transform: translate(-50%, 0%);
@@ -74,12 +74,20 @@ li a {
   -webkit-box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.4);
           box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.4);
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .mainbox img {
   text-align: center;
-  width: auto;
+  width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .links {
@@ -87,12 +95,15 @@ li a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
 }
 
 .links .link {
@@ -119,7 +130,6 @@ li a {
 .avatar {
   width: 50px;
   height: 50px;
-  background-color: white;
   border-radius: 50%;
   display: inline;
   margin-top: 20px;
@@ -159,9 +169,9 @@ li a {
   border-radius: 50%;
   padding: 10px;
   margin: 10px;
-  background-color: rgba(0, 0, 0, 0.4);
-  -webkit-box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.4);
-          box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.4);
+  background-color: #2a3b47;
+  -webkit-box-shadow: 2px 2px 20px rgba(49, 46, 46, 0.1);
+          box-shadow: 2px 2px 20px rgba(49, 46, 46, 0.1);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -175,10 +185,24 @@ li a {
 
 .social i:hover {
   background-color: white;
-  color: crimson;
+  color: #475e6e;
 }
 
 .social a {
   text-decoration: none;
+}
+
+@media (max-width: 500px) {
+  .mainbox {
+    width: 350px;
+    height: 350px;
+  }
+}
+
+@media (max-width: 400px) {
+  .mainbox {
+    width: 300px;
+    height: 300px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
