--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,7 @@
+$mcolor: #475e6e;
+$scolor: #2a3b47;
+$ecolor: white;
+
 * {
   margin: 0;
   padding: 0;
@@ -7,8 +11,8 @@
 
 body {
   min-height: 100vh;
-  background-color: crimson;
-  color: white;
+  background-color: $mcolor;
+  color: $ecolor;
 }
 
 li {
@@ -16,7 +20,7 @@ li {
 }
 
 a {
-  color: white;
+  color: $ecolor;
 }
 li a {
   text-decoration: none;
@@ -24,7 +28,7 @@ li a {
 
 .main {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -49,7 +53,7 @@ li a {
 .box {
   height: 100%;
   width: 50%;
-  background-color: rgb(121, 10, 32);
+  background-color: $scolor;
   position: absolute;
   top: 0%;
   transform: translate(-50%, 0%);
@@ -61,19 +65,24 @@ li a {
   height: 450px;
   box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.4);
   overflow: hidden;
+  display: flex;
+  justify-content: center;
 
   img {
     text-align: center;
-    width: auto;
+    width: 100%;
     height: 100%;
+    object-fit: cover;
   }
 }
 
 .links {
   font-size: 25px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
   // position: absolute;
   // top: 95%;
   // left: 50%;
@@ -92,7 +101,7 @@ li a {
   .link a {
     display: inline-block;
     padding: 10px;
-    // border: 2px solid white;
+    // border: 2px solid $ecolor;
   }
   :hover,
   .active {
@@ -110,7 +119,6 @@ li a {
 .avatar {
   width: 50px;
   height: 50px;
-  background-color: white;
   border-radius: 50%;
   display: inline;
   margin-top: 20px;
@@ -141,20 +149,34 @@ li a {
     border-radius: 50%;
     padding: 10px;
     margin: 10px;
-    background-color: rgba(0, 0, 0, 0.4);
-    box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.4);
+    background-color: $scolor;
+    box-shadow: 2px 2px 20px rgba(49, 46, 46, 0.1);
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
   i:hover {
-    background-color: white;
-    color: crimson;
+    background-color: $ecolor;
+    color: $mcolor;
   }
 
   a {
     text-decoration: none;
+  }
+}
+
+@media (max-width: 500px) {
+  .mainbox {
+    width: 350px;
+    height: 350px;
+  }
+}
+
+@media (max-width: 400px) {
+  .mainbox {
+    width: 300px;
+    height: 300px;
   }
 }
 
