--- a/style.css
+++ b/style.css
@@ -91,15 +91,15 @@ li a {
 }
 
 .links {
-  font-size: 25px;
+  font-size: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -125,6 +125,15 @@ li a {
   word-spacing: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .avatar {
@@ -196,6 +205,13 @@ li a {
   .mainbox {
     width: 350px;
     height: 350px;
+  }
+  .name {
+    font-size: 30px;
+    word-spacing: 15px;
+  }
+  .links {
+    font-size: 18px;
   }
 }
 
