--- a/style.scss
+++ b/style.scss
@@ -77,10 +77,10 @@ li a {
 }
 
 .links {
-  font-size: 25px;
+  font-size: 20px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   text-align: center;
   // position: absolute;
@@ -115,6 +115,9 @@ li a {
   word-spacing: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .avatar {
@@ -171,6 +174,13 @@ li a {
   .mainbox {
     width: 350px;
     height: 350px;
+  }
+  .name {
+    font-size: 30px;
+    word-spacing: 15px;
+  }
+  .links {
+    font-size: 18px;
   }
 }
 
